# INVOICE

./: .gitignore  ARCHITECTURE_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  DOMESTIC_SYSTEM_DOCUMENTATION.md  Dockerfile  Excel_Delta_Status_Formulas.txt  Invoice_Audit_User_Guide.md  PQ_Load_AuditResult.pq  README.md  audit_logic_compliant_system.py  check_air_audit_results.py  excel_to_csv_converter.py  final_integrated_audit_system.py  integrated_audit_system.py  joiners_improved.py  load_named_range_and_validate.py  modApplyFormula.bas  modAuditControl.bas  modCompileMaster.bas  modExtractFormulas.bas  modHelpers.bas  modPipeline.bas  plan.md  pyproject.toml  requirements.txt  rules_improved.py  run_audit_system.py  simple_audit_runner.py  test_portal_fee_system.py  upgraded_audit_system.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
HVDC_Invoice-20251015T070213Z-1-001/: plan.md
HVDC_Invoice-20251015T070213Z-1-001/HVDC_Invoice/HVDC_Invoice_Audit/: .gitignore  FILE_STRUCTURE_FINAL.md  LEGACY_FILES_REPORT.xlsx  MANUAL_INSTALLATION_REQUIRED.md  QUICK_START_GUIDE.md  SCNT HVDC DRAFT INVOICE FOR DOMESTIC DELIVERY SEPTEMBER 2025.xlsx  SETUP_CHECKLIST.md  WORK_COMPLETION_FINAL_SUMMARY.md  WSL2_HYBRID_SYSTEM_SETUP_COMPLETE_REPORT.md  requirements_hybrid.txt  setup_python_env.sh  start_hybrid_system.sh
HVDC_Invoice-20251015T070213Z-1-001/HVDC_Invoice/hvdc_pipeline/: CHANGELOG.md  README.md  requirements.txt  run_full_pipeline.bat  run_full_pipeline.ps1  run_pipeline.py  verify_anomaly_colors.py
HVDC_Invoice-20251015T070213Z-1-001/HVDC_Invoice/hvdc_pipeline_v4.0.0/: README.md  (+14 more)
HVDC_Invoice-20251015T070213Z-1-001/HVDC_Invoice/hvdc_pipeline_v4.0.0.backup_20251022_055000/: CHANGELOG.md  README.md  check_colors.py  check_colors_correct.py  check_excel_caseids.py  check_json_caseids.py  run_pipeline.py  test_visualizer.py
HVDC_Invoice_Audit-20251012T195441Z-1-001-20251013T035444Z-1-001/02_DSV_DOMESTIC/: enhanced_matching.py
HVDC_Invoice_Audit-20251012T195441Z-1-001-20251013T035444Z-1-001/OFCO_Collection/: BUSHRA_PARSER_COMPLETION_REPORT.md  CSV_EXPORT_README.md  FINAL_SUMMARY.md  OFCO-INV-0001178.parsed.json  OFCO_PARSER_COMPLETION_REPORT.md  README.md  json_to_csv.py  ofco_parser.py  parsed_output.json  parsed_result_final.json  samsung_invoice.csv  samsung_parsed_fixed.json  test_ofco_parser.py
HVDC_Invoice_Audit/Core_Systems/: report_summary.py
PIPELINE/: 입고월 입고_DSV Indoor 출고_DSV Indoor 누적_DSV I.tsv
PIPELINE/Core/: CHANGELOG.md  README.md  check_colors.py  run_full_pipeline.bat  run_full_pipeline.ps1  run_full_pipeline.sh  run_pipeline.py
PIPELINE/Execution/: # OFCO INVOICE 구조 및 알고리즘 상세 분석 보고서.MD  00_run_full_pipeline.py  01_ofco_pdf_to_complete_pipeline.py  02_ofco_complete_pipeline_v2.py  M_CV_DA_DH_RELATIONSHIP_ANALYSIS.md  OFCO INVOICE.xlsx  OFCO INVOICE.xlsx.backup  OFCO_COMPREHENSIVE_ANALYSIS.md  OFCO_INVOICE_INTEGRATION_FLOW.md  OFCO_INVOICE_INTEGRATION_MAPPING_REPORT.md  OFCO_INVOICE_STRUCTURE_DETAILED_ANALYSIS.md  OFCO청구.MD  PATCH6.MD  PATCH7.MD  PATCH_GUIDE.md  PIPELINE_STEP_VERIFICATION.md  PROJECT_WORKLOG.md  README.md  apply_all_patches.py  cost_center_mapping.py  ea_slot_decomposer.py  excel_exporter.py  monthly_invoice_processor.py  ofco_header_core.py  ofco_pipeline_pdf_OFCO_INV_0001178_v3.xlsx  ofco_pipeline_pdf_UNKNOWN_v3.xlsx  patch.md  patch2.md  patch3.md  patch4.md  patch5.md  shared_ofco_header_core.py  step00_ofco_pdf_preprocessor.py  step01_OFCO_INV_0001178.xlsx  step01_SAFEEN_ADP.xlsx  step03_ofco_to_standard_lines_excel.py  step03_ofco_to_standard_lines_excel_original.py  step03_ofco_to_standard_lines_excel_patched_v2.py  step04_ofco_map_price_center.py  step04_ofco_mapping_v3.py  (+11 more)
PIPELINE/PP1030/: HVDC Pipeline v4.0.54.md  HVDC Pipeline 시스템 아키텍처 문서 v4.0.54.md  README.md  README_UNIFIED.md  Untitled-1.ini  agent.md  agents.md  analyze_final_location_inventory.py  compare_csv_vs_samsung.py  compare_debug.txt  compare_debug_v2.txt  compare_dsv_indoor.py  compare_samsung_vs_final_location.py  compare_samsung_vs_final_location_corrected.py  excel_debug.txt  mini_debug.txt  plan_siemens_warehouse_sync.md  pyproject.toml  requirements.txt  siemens_debug.txt  simulate_file_selection.py  skillguide.md  sync_debug.txt  update_debug.txt  validate_imports.py  validate_requirements.py  verify_all_merge_logic.py  verify_pipeline_merge.py  복사본 Draft - (SCT)_DSV_Storage Operation Draft for Feb 2026 Rev1.xlsx
PIPELINE/PP_1027/: # 스팟 파이프라인 실행 계획 (20251030v2).md  test_color.xlsx
PIPELINE/pp/: CHANGELOG.md  CHANGELOG.md.backup  CHANGELOG.md.backup_v4.0.32  HVDC_입고로직_종합리포트_20251022_230031_v3.0-corrected.xlsx  README.md  README.md.backup  README.md.backup_v4.0.32  run_full_pipeline.bat  run_full_pipeline.ps1  run_full_pipeline.sh  run_pipeline.py
PIPELINE/pp1/: 입출고.PY
invoice-audit/: Module1.bas
invoice-audit/py/: AUDIT LOGIC.MD  joiners.py  rules.py
invoice-audit/utils/: modNamedRangeMap.bas
py/: audit_runner.py  joiners.py  rules.py
utils/: PQ_Load_Sheet_By_Name.m  PQ_fxLoadNamedRange.m  modNamedRangeMap.bas
(+1038 files in other folders)
